--- a/site/package.json
+++ b/site/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "homepage": "https://lucian-bosinceanu.github.io/lego-assembly-front/",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -22,9 +22,12 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "ignore-styles": "^5.0.1",
     "jsdom": "^12.0.0",
+    "react-scripts": "1.0.13",
     "style-loader": "^0.21.0",
     "url-loader": "^1.1.1",
     "webpack": "^4.10.2",
@@ -35,7 +38,6 @@
     "@material-ui/core": "^3.6.1",
     "@material-ui/icons": "^3.0.1",
     "d3": "^5.5.0",
-    "gh-pages": "^2.0.1",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "npm": "^6.4.0",
